--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev",
-    "start": "next start"
+    "dev": "next dev -p 3018",
+    "start": "next start" 
   },
   "dependencies": {
     "next": "latest",
