--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev -p 3018",
-    "start": "next start" 
+    "start": "next start -p 3018" 
   },
   "dependencies": {
     "next": "latest",
